--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link rel="stylesheet" href="public/bootstrap.min.css">
+    <link rel="stylesheet" href="/bootstrap.min.css">
     <title>TODO App</title>
   </head>
   <body>
